14 september 2020:
	-Create ScalingUtilities and methods to create bitmaps in it