@@ -1,0 +1,7 @@
+package com.example.myapplication;
+
+public class Constants {
+    public static final String RESOURCE_TO_COMPRESS="resource_to_compress";
+    public static final String IMAGE="image";
+    public static final String FOLDER="folder";
+}
